# nopaco

./: DESCRIPTION  LICENCE  NAMESPACE  NEWS  NEWS.md  configure  configure.ac
R/: allGenerics.R  concordance.test.R  dataDoc.R  onLoad.R  zzz.R
data/: scores.rda
inst/: CITATION  COPYRIGHTS
man/: ConcordanceTest-class.Rd  coef-methods.Rd  concordance.test.Rd  convertionMethods.Rd  get-methods.Rd  getPsi-methods.Rd  names-methods.Rd  scores.Rd
src/: Makevars  bootstrapCI.cpp  bootstrapCI.h  exactdistribution.cpp  exactdistribution.h  exactdistribution202.cpp  exactdistribution202.h  exactdistribution_base.cpp  exactdistribution_base.h  getPsi.cpp  getPsi.h  register.cpp  samplePsi.cpp  samplePsi.h
src/densehash/: dense_hash_map  densehashtable.h  hashtable-common.h  sparseconfig.h  sparseconfig.h.in  sparsehashtable.h  type_traits.h
src/sparsehash/: sparsetable  type_traits.h
src/sparsehash/internal/: densehashtable.h  sparseconfig.h
vignettes/: nopaco.Rnw
vignettes/Figures/tmp/: flowchart.tiff
